[gd_scene load_steps=4 format=2]

[ext_resource path="res://Assets/font/Chalkduster_48.tres" type="DynamicFont" id=1]
[ext_resource path="res://game/intro.gd" type="Script" id=2]

[sub_resource type="AnimatedTexture" id=1]

[node name="intro" type="Node2D"]

[node name="Control" type="Control" parent="."]
margin_right = 40.0
margin_bottom = 40.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextureRect" type="TextureRect" parent="Control"]
margin_right = 1283.0
margin_bottom = 722.0
texture = SubResource( 1 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="Control/TextureRect"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -311.0
margin_top = -245.5
margin_right = 311.0
margin_bottom = 245.5
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="Control/TextureRect/VBoxContainer"]
margin_right = 622.0
margin_bottom = 127.0
custom_fonts/font = ExtResource( 1 )
text = "Select a level to start
"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="level1" type="Button" parent="Control/TextureRect/VBoxContainer"]
margin_top = 131.0
margin_right = 622.0
margin_bottom = 199.0
custom_fonts/font = ExtResource( 1 )
text = "Level 1"
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="level2" type="Button" parent="Control/TextureRect/VBoxContainer"]
margin_top = 203.0
margin_right = 622.0
margin_bottom = 271.0
custom_fonts/font = ExtResource( 1 )
text = "Level 2"
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="level3" type="Button" parent="Control/TextureRect/VBoxContainer"]
margin_top = 275.0
margin_right = 622.0
margin_bottom = 343.0
custom_fonts/font = ExtResource( 1 )
text = "Level 3"
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="level4" type="Button" parent="Control/TextureRect/VBoxContainer"]
margin_top = 347.0
margin_right = 622.0
margin_bottom = 415.0
custom_fonts/font = ExtResource( 1 )
text = "Level 4"

[node name="level5" type="Button" parent="Control/TextureRect/VBoxContainer"]
margin_top = 419.0
margin_right = 622.0
margin_bottom = 487.0
custom_fonts/font = ExtResource( 1 )
text = "Level 5"

[node name="Back" type="Button" parent="Control/TextureRect"]
margin_right = 12.0
margin_bottom = 20.0
custom_fonts/font = ExtResource( 1 )
text = "Back"

[connection signal="pressed" from="Control/TextureRect/VBoxContainer/level1" to="Control/TextureRect/VBoxContainer/level1" method="_on_start_pressed"]
[connection signal="pressed" from="Control/TextureRect/VBoxContainer/level2" to="Control/TextureRect/VBoxContainer/level1" method="_on_start2_pressed"]
[connection signal="pressed" from="Control/TextureRect/VBoxContainer/level3" to="Control/TextureRect/VBoxContainer/level1" method="_on_start3_pressed"]
[connection signal="pressed" from="Control/TextureRect/VBoxContainer/level4" to="Control/TextureRect/VBoxContainer/level1" method="_on_level4_pressed"]
[connection signal="pressed" from="Control/TextureRect/VBoxContainer/level5" to="Control/TextureRect/VBoxContainer/level1" method="_on_level5_pressed"]
[connection signal="pressed" from="Control/TextureRect/Back" to="Control/TextureRect/VBoxContainer/level1" method="_on_Back_pressed"]
